--- a/main.html
+++ b/main.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Cards Example</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="container mt-5">
+        <div class="card-deck">
+            <!-- First Card -->
+            <div class="card bg-light">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card image">
+                <div class="card-header">Welcome to Sync5</div>
+                <div class="card-body">
+                    <h5 class="card-title">New Features</h5>
+                    <p class="card-text">Mobile and Tablet support</p>
+                    <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+                    <a href="#" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+            <!-- Second Card -->
+            <div class="card bg-warning">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card image">
+                <div class="card-header">Alert</div>
+                <div class="card-body">
+                    <h5 class="card-title">Node Dead</h5>
+                    <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+                    <p class="card-text">President under Pressure</p>
+                    <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+                    <p class="card-text text-muted">Last updated 12 mins ago</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
