--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <div class="card-deck">
             <!-- First Card -->
-            <div class="card bg-light">
+            <div class="card bg-light bg-danger">
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card image">
                 <div class="card-header">Welcome to Sync5</div>
                 <div class="card-body">
