--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <!-- Second Card -->
-            <div class="card bg-warning">
+            <div class="card bg-warning bg-danger">
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="Card image">
                 <div class="card-header">Alert</div>
                 <div class="card-body">
